--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
         <p>The leadership at VIT-AP resonates a dynamic blend of academic initiative and industry partnership with a vision of creating one of the finest academic destinations in the world.</p>
         <div class="row">
             <div class="campus-col">
-                <img src="images/chennai-campus.webp">
+                <img src="chennai-campus.webp">
                 <div class="layer">
                     <h3>CHENNAI</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="images/Vellore-campus.jpg">
+                <img src="Vellore-campus.jpg">
                 <div class="layer">
                     <h3>VELLORE</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="images/banglore.jpg">
+                <img src="banglore.jpg">
                 <div class="layer">
                     <h3>BANGLORE</h3>
                 </div>
@@ -86,17 +86,17 @@
         <p>Check Out Our World Class Facilities</p>
         <div class="row">
             <div class="facilities-col">
-                <img src="images/library.webp">
+                <img src="library.webp">
                 <h3>World Class Library</h3>
                 <p>Experience the Entertainment</p>
             </div>
             <div class="facilities-col">
-                <img src="images/labs.jpg">
+                <img src="labs.jpg">
                 <h3>World Class Lab Facilities</h3>
                 <p>Experience the Entertainment</p>
             </div>
             <div class="facilities-col">
-                <img src="images/sport.png">
+                <img src="sport.png">
                 <h3>World Class Sports Arena</h3>
                 <p>Experience the Entertainment</p>
             </div>
@@ -109,7 +109,7 @@
         <p>Explore the Reviews</p>
         <div class="row">
             <div class="testimonials-col">
-                <img src="images/pic1.jpg">
+                <img src="pic1.jpg">
                 <div>
                     <p>The college offers a well-rounded experience with a strong focus on academics, supported by experienced and approachable faculty. The campus is equipped with good infrastructure, including modern classrooms, libraries, and labs, providing a conducive environment for learning.</p>
                     <h3>Shreyanka</h3>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="testimonials-col">
-                <img src="images/pic2.webp">
+                <img src="pic2.webp">
                 <div>
                     <p>Alongside academics, the institution encourages student participation in cultural events, sports, and various clubs, fostering all-round development. Placements are fairly good, with many reputed companies visiting during recruitment drives. Overall, it's a great place for students seeking both academic growth and personal development.</p>
                     <h3>Phoebe Litchfield</h3>
